Day3/0.security/basics/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db

---

apiVersion: v1
kind: Namespace
metadata:
  name: dev

---

apiVersion: v1
kind: Namespace
metadata:
  name: test

---

apiVersion: v1
kind: Namespace
metadata:
  name: prod
