Day3/0.security/basics/denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: db
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
